finance-service/src/main/java/com/example/financetracker/finance/api/error/AccessDeniedException.java
package com.example.financetracker.finance.api.error;

import org.springframework.http.HttpStatus;

public class AccessDeniedException extends ApiException {

    public AccessDeniedException(String message) {
        super(HttpStatus.FORBIDDEN, message);
    }
}
